--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,85 @@
-
+.header{
+	width:100%;
+	max-width:900px;
+	margin:auto;
+   }
+  .h1{
+	font-family:Impact, Haettenschweiler;
+	font-size: 30px;
+  }
+  .caixa1 {
+	float: left;
+	width: 500px;
+	height: 450px;
+	padding: 10px 12px 14px 16px;
+	border-width: 2px;
+	border-style: dotted;
+	margin: 10px;
+  }
+  .caixa2 {
+	float: left;
+	background-color: #E5E5E5;
+	width: 500px;
+	height: 450px;
+	padding: 10px 12px 14px 16px;
+	border-width: 2px;
+	border-style: dotted;
+	margin: 10px;
+  }
+  nav{
+	position:relative;
+	margin:auto;
+  
+  }
+		
+  nav a{
+	text-decoration:none;
+	color:inherit;
+	font-size:14px;
+  }
+			
+  nav li{
+	display:inline-block;
+	width:150px;
+	height:30px;
+	padding:5px 10px;
+	border:1px solid #000;
+	text-align:center;
+	background-color:#000;
+	color:#fff;
+  }
+			
+  nav li:hover{
+	background-color:#fff;
+	color:#000;
+  }
+			
+  nav li>ul{
+  position:absolute;
+  left:0px;
+  top:30px;
+  display:block;
+  }
+			
+  nav li>ul{
+	display:none;
+  }            
+  
+  nav li:hover>ul{
+	display:block;
+  }
+  
+  
+  /*creació d'un botó per enllaçar a altres lloc o a altres llocs 
+  de la web*/
+  .boto {
+	border: 1px solid #525252; /*amplada, estil i color borde*/
+	padding: 10px; /*espacio al voltant del text*/
+	background-color: #525252; /*color botó*/
+	color: #ffffff; /*color text*/
+	text-decoration: none; /*decoració text*/
+	text-transform: uppercase; /*capitalizació text*/
+	font-family: 'Helvetica', sans-serif; /*tipografía text*/
+	border-radius: 0px; /*bordes rodons*/
+	float: right;
+	}
