--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,23 @@
-.header{
-	width:100%;
-	max-width:900px;
-	margin:auto;
-   }
-  .h1{
-	font-family:Impact, Haettenschweiler;
-	font-size: 30px;
-  }
-  .caixa1 {
+body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
+	background-color: #f2f2f2;
+}
+/* Estilo para la mesa */
+.table {
+	margin: 50px auto;
+	width: 80%;
+	height: 500px;
+	background-color: #fff;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+	border-radius: 10px;
+	padding: 20px;
+	box-sizing: border-box;
+	font-size: 1.2rem;
+	line-height: 1.5;
+
+.caixa1 {
 	float: left;
 	width: 500px;
 	height: 450px;
@@ -15,71 +25,54 @@
 	border-width: 2px;
 	border-style: dotted;
 	margin: 10px;
-  }
-  .caixa2 {
-	float: left;
-	background-color: #E5E5E5;
-	width: 500px;
-	height: 450px;
-	padding: 10px 12px 14px 16px;
-	border-width: 2px;
-	border-style: dotted;
-	margin: 10px;
-  }
-  nav{
-	position:relative;
-	margin:auto;
-  
-  }
-		
-  nav a{
-	text-decoration:none;
-	color:inherit;
-	font-size:14px;
-  }
-			
-  nav li{
-	display:inline-block;
-	width:150px;
-	height:30px;
-	padding:5px 10px;
-	border:1px solid #000;
-	text-align:center;
-	background-color:#000;
-	color:#fff;
-  }
-			
-  nav li:hover{
-	background-color:#fff;
-	color:#000;
-  }
-			
-  nav li>ul{
-  position:absolute;
-  left:0px;
-  top:30px;
-  display:block;
-  }
-			
-  nav li>ul{
-	display:none;
-  }            
-  
-  nav li:hover>ul{
-	display:block;
-  }
-  
-  
-  /*creació d'un botó per enllaçar a altres lloc o a altres llocs 
-  de la web*/
-  .boto {
-	border: 1px solid #525252; /*amplada, estil i color borde*/
-	padding: 10px; /*espacio al voltant del text*/
-	background-color: #525252; /*color botó*/
-	color: #ffffff; /*color text*/
-	text-decoration: none; /*decoració text*/
-	text-transform: uppercase; /*capitalizació text*/
-	font-family: 'Helvetica', sans-serif; /*tipografía text*/
-	border-radius: 0px; /*bordes rodons*/
-	float: right;
-	}
+	  }
+}
+/* Estilo para el menú */
+nav {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: #333;
+	color: #fff;
+	padding: 10px;
+	box-sizing: border-box;
+	font-size: 1.2rem;
+	z-index: 100;
+}
+nav ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+nav ul li {
+	margin: 0 10px;
+}
+nav a {
+	color: #fff;
+	text-decoration: none;
+}
+/* Estilo para el efecto Parallax */
+.parallax {
+	background-image: url('https://via.placeholder.com/1600x900');
+	height: 800px;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+}
+.parallax-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #fff;
+	text-align: center;
+	font-size: 3rem;
+	font-weight: bold;
+	text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+}
