--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,6 @@ body {
 	background-color: #f2f2f2;
 }
 /* Estilo para la mesa */
-.table {
-	margin: 50px auto;
-	width: 80%;
-	height: 500px;
-	background-color: #fff;
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-	border-radius: 10px;
-	padding: 20px;
-	box-sizing: border-box;
-	font-size: 1.2rem;
-	line-height: 1.5;
-
 .caixa1 {
 	float: left;
 	width: 500px;
@@ -25,8 +13,17 @@ body {
 	border-width: 2px;
 	border-style: dotted;
 	margin: 10px;
-	  }
-}
+  }
+  .caixa2 {
+	float: left;
+	background-color: #E5E5E5;
+	width: 500px;
+	height: 450px;
+	padding: 10px 12px 14px 16px;
+	border-width: 2px;
+	border-style: dotted;
+	margin: 10px;
+  }
 /* Estilo para el menú */
 nav {
 	position: fixed;
