--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ nav a {
 }
 
 .parallax {
-	background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.es%2Fpin%2F546202261038222373%2F&psig=AOvVaw3ykPldG89lpk2XpZ08o1IU&ust=1677544501831000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCNjTxLu6tP0CFQAAAAAdAAAAABAD');
+	background-image: url('https://i.blogs.es/96c5ad/pan_tomate/1366_2000.jpeg');
 	height: 800px;
 	background-attachment: fixed;
 	background-position: center;
