--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,48 @@ nav ul {
 	justify-content: space-between;
 	align-items: center;
 }
-nav ul li {
-	margin: 0 10px;
-}
-nav a {
-	color: #fff;
-	text-decoration: none;
-}
+nav{
+	position:relative;
+	margin:auto;
+  
+  }
+		
+  nav a{
+	text-decoration:none;
+	color:inherit;
+	font-size:14px;
+  }
+			
+  nav li{
+	display:inline-block;
+	width:150px;
+	height:30px;
+	padding:5px 10px;
+	border:1px solid #333;
+	text-align:center;
+	background-color:#333;
+	color:#fff;
+  }
+			
+  nav li:hover{
+	background-color:#fff;
+	color:#333;
+  }
+			
+  nav li>ul{
+  position:absolute;
+  left:0px;
+  top:30px;
+  display:block;
+  }
+			
+  nav li>ul{
+	display:none;
+  }            
+  
+  nav li:hover>ul{
+	display:block;
+  }
 
 .parallax {
 	background-image: url('https://i.blogs.es/96c5ad/pan_tomate/1366_2000.jpeg');
