--- a/css/style.css
+++ b/css/style.css
@@ -21,39 +21,9 @@ body {
 	margin: 50px;
   }
   
-  nav li>ul{
-	position:fixed;
-	left:0px;
-	top:30px;
-	display:block;
-	}
-
-nav li:hover>ul{
-	display:block;
-	}
-
-nav {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background-color: #333;
-	color: #fff;
-	padding: 10px;
-	box-sizing: border-box;
-	font-size: 1.2rem;
-	z-index: 100;
-}
-nav ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-nav{
-	position:fixed;
+  nav{
+	position:relative;
+	top:100px;
 	margin:auto;
   
   }
@@ -69,15 +39,15 @@ nav{
 	width:150px;
 	height:30px;
 	padding:5px 10px;
-	border:1px solid #333;
+	border:1px solid #000;
 	text-align:center;
-	background-color:#333;
+	background-color:#000;
 	color:#fff;
   }
 			
   nav li:hover{
 	background-color:#fff;
-	color:#333;
+	color:#000;
   }
 			
   nav li>ul{
@@ -94,6 +64,8 @@ nav{
   nav li:hover>ul{
 	display:block;
   }
+  
+  
 
 .parallax {
 	background-image: url('https://i.blogs.es/96c5ad/pan_tomate/1366_2000.jpeg');
