--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial, sans-serif;
@@ -29,68 +29,24 @@ body {
 	background-color: #333;
 	color: #fff;
 	padding: 10px;
+	box-sizing: border-box;
 	font-size: 1.2rem;
+	z-index: 100;
 }
-
 nav ul {
-	list-style: none;
 	margin: 0;
 	padding: 0;
+	list-style: none;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
-
-nav li {
+nav ul li {
 	margin: 0 10px;
 }
-
 nav a {
 	color: #fff;
 	text-decoration: none;
-	padding: 10px;
-	display: block;
-	transition: all 0.3s ease-in-out;
-}
-
-nav a:hover {
-	background-color: #fff;
-	color: #333;
-	border-radius: 5px;
-}
-
-/* Estilos para el menú desplegable */
-nav ul ul {
-	display: none;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	background-color: #fff;
-	padding: 0;
-	border-radius: 5px;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-}
-
-nav ul li:hover > ul {
-	display: block;
-}
-
-nav ul ul li {
-	display: block;
-	margin: 0;
-}
-
-nav ul ul a {
-	color: #333;
-	padding: 10px;
-	display: block;
-	font-size: 1rem;
-}
-
-nav ul ul a:hover {
-	background-color: #eee;
-	color: #333;
-	border-radius: 5px;
 }
 
 .parallax {
